external account (#59)
* chore(CI): Add github action workflow

* small fixes

* fix(semester): fix transaction handling in setCurrent method

* feat(external-account): implement external account module with controller, service, and DTOs
